# gradle-analyzer

./: .gitignore  Cargo.toml  gradle-analyzer.toml.example
examples/: groovy_parse_demo.rs  kotlin_parse_demo.rs  semantic_demo.rs  sidecar_fake_demo.rs  sidecar_real_demo.rs  syntax_demo.rs  workspace_demo.rs
sidecar-jvm/: build-sidecar.sh  sidecar-init.gradle
src/: config.rs  document.rs  i18n.rs  lib.rs  logging.rs  main.rs  services.rs  syntax.rs  workspace.rs
src/app/: application.rs  logging.rs  mod.rs
src/config/: default.rs  error.rs  load.rs  loader.rs  manager.rs  mod.rs  model.rs  preclude.rs  raw.rs  watcher.rs
src/document/: findkind.rs
src/gradle/: mod.rs
src/gradle/code_actions/: builders.rs  mod.rs  tests.rs
src/gradle/completion/: candidates.rs  context.rs  mod.rs  ranking.rs  scope.rs  tests.rs
src/gradle/diagnostics/: mod.rs  model.rs  semantic.rs  syntax.rs  tests.rs  unused_import.rs
src/gradle/hover/: blocks.rs  facts.rs  mod.rs  tests.rs
src/gradle/navigation/: definition.rs  locate.rs  lsp.rs  mod.rs  references.rs  tests.rs
src/gradle/parser/: mod.rs
src/gradle/semantic/: catalog.rs  facts.rs  graph.rs  id.rs  message.rs  mod.rs  tests.rs
src/i18n/: catalog.rs  key.rs  message.rs  mod.rs  translator.rs
src/lsp/: capabilities.rs  deadline.rs  dispatch.rs  lifecycle.rs  mod.rs  server.rs
src/services/: diagnostics.rs  handle_change.rs  handle_close.rs  handle_open.rs  mod.rs  workspace.rs
src/syntax/: span.rs
src/util/: fs.rs  line_index.rs  mod.rs  paths.rs  probe.rs
tests/: sidecar_real_sync.rs  stdio_probe.rs
(+81 files in other folders)
