[package]
name = "gradle-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2.5"
tokio = { version = "1.52.3", features = ["full"] }
tower-lsp = "0.20.0"
serde_json = { version = "1.0" }
serde = { version = "1.0.228", features = ["std", "derive"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
toml = "1.1.2"
shellexpand = "3.1.2"
