[package]
name = "gradle-analyzer"
version = "0.1.0"
edition = "2024"

[lib]
name = "gradle_analyzer"
path = "src/lib.rs"

[[bin]]
name = "gradle-analyzer"
path = "src/main.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.5"
tokio = { version = "1.52.3", features = ["full"] }
tower-lsp = "0.20.0"
serde_json = { version = "1.0" }
serde = { version = "1.0.228", features = ["std", "derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
notify = "8.2.0"
arc-swap = "1.9.1"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["test-util", "macros", "rt", "rt-multi-thread", "time"] }
